backend/test_renewal_restriction_error.txt
C:\Users\D E L L\Desktop\react django projects\ecommerce\env\Lib\site-packages\razorpay\client.py:4: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  import pkg_resources
Traceback (most recent call last):
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\backend\manage.py", line 22, in <module>
    main()
    ~~~~^^
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\backend\manage.py", line 18, in main
    execute_from_command_line(sys.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\env\Lib\site-packages\django\core\management\__init__.py", line 442, in execute_from_command_line
    utility.execute()
    ~~~~~~~~~~~~~~~^^
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\env\Lib\site-packages\django\core\management\__init__.py", line 436, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\env\Lib\site-packages\django\core\management\base.py", line 416, in run_from_argv
    self.execute(*args, **cmd_options)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\env\Lib\site-packages\django\core\management\base.py", line 460, in execute
    output = self.handle(*args, **options)
  File "C:\Users\D E L L\Desktop\react django projects\ecommerce\env\Lib\site-packages\django\core\management\commands\shell.py", line 247, in handle
    exec(options["command"], {**globals(), **self.get_namespace(**options)})
    ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<string>", line 1
    from promoter.models import Promoter, Subscription; from django.contrib.auth import get_user_model; from django.utils import timezone; from datetime import timedelta; from rest_framework.test import APIRequestFactory, force_authenticate; from promoter.views import ManageSubscriptionAPIView; User = get_user_model(); user = User.objects.first(); promoter = Promoter.objects.get(user=user); sub = Subscription.objects.filter(promoter=promoter, status='active').first(); if not sub: sub = Subscription.objects.create(promoter=promoter, amount=100, started_at=timezone.now(), expires_at=timezone.now() + timedelta(days=5), status='active'); sub.expires_at = timezone.now() + timedelta(days=5); sub.status = 'active'; sub.save(); print(f'Active sub expires at: {sub.expires_at}'); factory = APIRequestFactory(); request = factory.post('/api/promoter/manage-subscription/', {'plan_type': 'monthly'}, format='json'); force_authenticate(request, user=user); view = ManageSubscriptionAPIView.as_view(); response = view(request); print(f'Response Status: {response.status_code}'); print(f'Response Data: {response.data}')
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         ^^
SyntaxError: invalid syntax
